<resources>
    <string name="app_name">Speedmeter</string>
    <string name="permission_denied">GPS permission denied</string>
    <string name="max_speed">Max Speed</string>
    <string name="average_speed">Average Speed</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="accuracy">Accuracy</string>
    <string name="satellite">Satellites</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="waiting_for_fix">Waiting for GPS fix …</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="please_enable_gps">In order to use this app you need the GPS to be enabled.</string>
    <string name="view_location_via">View location via</string>
    <string name="running">Route in process…</string>
    <string name="notification">Max Speed : %1$s, Distance : %2$s.</string>
    <string name="share_location_via">Share location via</string>
    <string name="settings">Settings</string>
    <string name="app_info">About this app</string>
    <string name="pref_auto_average">Automatically detect stop time.</string>
    <string name="pref_auto_average_summary">The time spent at stop will not count in the average speed.</string>
    <string name="pref_miles_per_hour">Use miles per hour</string>
    <string name="pref_miles_per_hour_summary">Display the speed in mi/h instead of km/h</string>

    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Click in order to support my work :) …</string>
    <string name="source_code">GitHub</string>
    <string name="source_code_summary">Access to the source code.</string>
    <string name="version">Speedmeter Version</string>

    <string name="noti_id" translatable="false">Speedmeterisanid</string>
    <string name="github" translatable="false">https://github.com/flyingrub/SpeedMeter</string>
    <string name="license_type" translatable="false">GNU General Public License 2</string>
    <string name="doante_url" translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DE8SFMJKRVK2</string>
    <string name="main">main</string>
    <string name="mainS">mainS</string>
    <string name="sensor">sensor</string>
    <string name="share_location">share_location</string>
    <string name="copy_location">copy_location</string>
    <string name="view_location">view_location</string>
    <string name="turn_on_GPS">turn_on_GPS</string>
    <string name="getting_location">getting_location</string>
    <string name="choose_link">choose_link</string>
    <string name="link_type">link_type</string>
    <string name="gps">gps</string>
    <string name="langutude">langutude</string>
    <string name="map">map</string>
    <string name="copied">Copied to clipboard</string>
    <string name="clipboard_error">Failed to copy text to clipboard</string>
    <string name="ref">ref</string>
    <string name="options">options</string>
    <string name="title_activity_maps_view">Map</string>
    <string name="ANS">Automated navigation system</string>
    <string name="mapActivityGis">GisView</string>
    <string name="height">height</string>

</resources>
